package com.randioo.chat_server.protocol;

message ChatData{
	optional bytes data = 3;
}