package com.randioo.chat_server.protocol;
import "Entity.proto";

message LoginRequest{
	optional string account = 1;
	optional string macAddress = 2;
}

message LoginResponse{
	optional int32 errorCode = 1 [default =1];
}
