package com.randioo.chat_server.protocol;
import "Chat.proto";
import "Login.proto";
import "Heart.proto";

message SC{
	optional LoginResponse LoginResponse = 1;

	optional ChatSendResponse ChatSendResponse = 2;
	optional ChatJoinRoomResponse ChatJoinRoomResponse = 3;
	optional ChatQuitRoomResponse ChatQuitRoomResponse = 4;
	optional SCChat SCChat = 5;


	optional HeartResponse HeartResponse = 6;//心跳回馈
	optional SCHeart SCHeart = 7;//心跳主推
} // 7
